--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,12 @@
-django==3.2.15
+asgiref==3.7.2
+Django==3.2.15
+exceptiongroup==1.1.3
+iniconfig==2.0.0
+packaging==23.1
+pluggy==1.3.0
+pytest==7.4.2
+pytest-lazy-fixture==0.6.3
+pytz==2023.3.post1
+sqlparse==0.4.4
+tomli==2.0.1
+typing_extensions==4.7.1
